# ArmadilloJava

./: .classpath  .gitignore  .project  .travis.yml  CNAME  CONTRIBUTING.md  CONVERSION.md  Conversion.md  README.md  Readme.md  build.xml  index.html  params.json  pom.xml  test.armamat  test.armatest  test.matlabmat  test.txt
src/test/cpp/: CMakeLists.txt
src/test/cpp/include/: Expected.hpp  ExpectedDatum.hpp  ExpectedOOMat.hpp  Input.hpp  InputClass.hpp
src/test/cpp/src/: AllExpected.cpp  Expected.cpp  ExpectedDatum.cpp  ExpectedElemIndFill.cpp  ExpectedGenColVec.cpp  ExpectedGenColVecElemInd.cpp  ExpectedGenColVecElemIndRange.cpp  ExpectedGenColVecElemInds.cpp  ExpectedGenColVecElemIndsGenDouble.cpp  ExpectedGenColVecExp.cpp  ExpectedGenColVecGenColVec.cpp  ExpectedGenColVecGenColVecNormal.cpp  ExpectedGenColVecGenDouble.cpp  ExpectedGenColVecGenMat.cpp  ExpectedGenColVecGenRowVec.cpp  ExpectedGenColVecGenRowVecNormal.cpp  ExpectedGenColVecMonColVec.cpp  ExpectedGenColVecMonRowVec.cpp  ExpectedGenColVecNormal.cpp  ExpectedGenColVecNumElems.cpp  ExpectedGenColVecNumRowsNumCols.cpp  ExpectedGenColVecRowIndColInd.cpp  ExpectedGenColVecRowIndColIndMatSize.cpp  ExpectedGenColVecRowIndRangeColIndRange.cpp  ExpectedGenColVecSort.cpp  ExpectedGenColVecVecNormInt.cpp  ExpectedGenColVecVecNormString.cpp  ExpectedGenDouble.cpp  ExpectedGenDoubleGenDouble.cpp  ExpectedGenDoubleGenDoubleNumElems.cpp  ExpectedGenMat.cpp  ExpectedGenMatColInd.cpp  ExpectedGenMatColIndRange.cpp  ExpectedGenMatColInds.cpp  ExpectedGenMatDim.cpp  ExpectedGenMatElemInd.cpp  ExpectedGenMatElemIndRange.cpp  ExpectedGenMatElemInds.cpp  ExpectedGenMatExp.cpp  ExpectedGenMatGenColVec.cpp  (+199 more)
src/test/data/: CMakeLists.txt  generateExpected.cpp  generateInput.cpp
src/test/data/expected/: Arma.abs(Col(hilbert(3,1))).mat  Arma.accu(Mat(eye(5,2))).mat  Arma.accu(Mat(kms(2,2))).mat  Arma.accu(Mat(kms(2,5))).mat  Arma.accu(Mat(kms(5,5))).mat  Arma.accu(Mat(ones(5,2))).mat  Arma.acos(Col(eye(3,1))).mat  Arma.acos(Col(eye(5,1))).mat  Arma.acos(Col(hilbert(3,1))).mat  Arma.acos(Col(hilbert(5,1))).mat  Arma.acos(Col(kms(3,1))).mat  Arma.acos(Col(kms(5,1))).mat  Arma.acos(Col(zeros(1,1))).mat  Arma.acos(Col(zeros(5,1))).mat  Arma.acos(Mat(eye(5,2))).mat  Arma.acos(Mat(eye(5,5))).mat  Arma.acos(Mat(hilbert(2,2))).mat  Arma.acos(Mat(hilbert(2,5))).mat  Arma.acos(Mat(hilbert(5,2))).mat  Arma.acos(Mat(hilbert(5,5))).mat  Arma.acos(Mat(zeros(2,1))).mat  Arma.acos(Mat(zeros(2,2))).mat  Arma.acos(Mat(zeros(2,5))).mat  Arma.acos(Mat(zeros(3,1))).mat  Arma.acos(Row(eye(1,3))).mat  Arma.acos(Row(eye(1,5))).mat  Arma.acos(Row(hilbert(1,3))).mat  Arma.acos(Row(hilbert(1,5))).mat  Arma.acos(Row(zeros(1,5))).mat  Arma.acosh(Col(eye(5,1))).mat  Arma.acosh(Col(hilbert(3,1))).mat  Arma.acosh(Col(kms(3,1))).mat  Arma.acosh(Col(kms(5,1))).mat  Arma.acosh(Mat(hilbert(2,5))).mat  Arma.acosh(Mat(hilbert(5,2))).mat  Arma.acosh(Mat(kms(1,3))).mat  Arma.acosh(Mat(kms(3,1))).mat  Arma.acosh(Mat(kms(5,2))).mat  Arma.acosh(Mat(kms(5,5))).mat  Arma.acosh(Row(hilbert(1,5))).mat  (+29724 more)
src/test/data/expected/TestArmaDecomposition/: testEig_sym.eigenValues.hankel.3x3.mat  testEig_sym.eigenValues.hankel.4x4.mat  testEig_sym.eigenValues.hilbert.3x3.mat  testEig_sym.eigenValues.hilbert.4x4.mat  testEig_sym.eigenValues.ones.10x10.mat  testEig_sym.eigenValues.ones.2x2.mat  testEig_sym.eigenValues.zeros.4x4.mat  testEig_sym.eigenVectors.eye.10x10.mat  testEig_sym.eigenVectors.hankel.10x10.mat  testEig_sym.eigenVectors.hankel.5x5.mat  testEig_sym.eigenVectors.hilbert.4x4.mat  testEig_sym.eigenVectors.hilbert.5x5.mat  testEig_sym.eigenVectors.ones.10x10.mat  testEig_sym.eigenVectors.ones.3x3.mat  testEig_sym.eigenVectors.ones.5x5.mat  testEig_sym.eigenVectors.zeros.2x2.mat  testEig_sym.eigenVectors.zeros.4x4.mat  testInv.eye.100x100.mat  testInv.eye.10x10.mat  testInv.eye.2x2.mat  testInv.eye.3x3.mat  testInv.eye.5x5.mat  testInv.hilbert.4x4.mat  testPinv.eye.100x10.mat  testPinv.eye.100x4.mat  testPinv.eye.10x100.mat  testPinv.eye.10x3.mat  testPinv.eye.10x4.mat  (+106 more)
src/test/data/input/: eye.10x1.mat  eye.10x3.mat  eye.10x4.mat  eye.1x10.mat  eye.1x100.mat  eye.4x1.mat  eye.5x10.mat  eye.5x2.mat  eye.5x5.mat  hankel.100x2.mat  hankel.100x4.mat  hankel.10x1.mat  hankel.10x10.mat  hankel.10x2.mat  hankel.10x3.mat  hankel.1x100.mat  hankel.1x3.mat  hankel.1x5.mat  hankel.2x1.mat  hankel.2x10.mat  hankel.2x2.mat  hankel.2x3.mat  hankel.2x4.mat  hankel.2x5.mat  hankel.3x10.mat  hankel.3x2.mat  hankel.3x5.mat  hankel.4x10.mat  hankel.4x2.mat  hankel.4x3.mat  hankel.5x100.mat  hankel.5x4.mat  hankel.5x5.mat  hilbert.1x3.mat  hilbert.1x4.mat  hilbert.2x1.mat  hilbert.2x2.mat  hilbert.2x4.mat  hilbert.2x5.mat  hilbert.3x3.mat  (+56 more)
(+6827 files in other folders)
